2002-05-31  Darin Adler  <darin@apple.com>

	* kwq/kwqdebug.h: Don't use displayableString; it's an SPI and those
	are no nos inside WebCore.

2002-05-31  Darin Adler  <darin@apple.com>

	* kwq/kio/jobclasses.h: Removed SimpleJob and made Job just enough for
	TransferJob to inherit from it. Removed unused stuff and made url() return
	an NSURL rather than a KURL.
	* kwq/KWQKjobclasses.mm: Removed much of the code, and reworked what
	remains to simplify it.
	* kwq/KWQKloader.mm: Update users of TransferJob::url since it now returns
	an NSURL rather than a KURL.

	* kwq/kio/job.h: Simplify.
	* kwq/KWQKJob.mm: Simplify.

	* kwq/kio/scheduler.h: Emptied this file out.
	* kwq/KWQKScheduler.mm: Removed.
	* kwq/Makefile.am: Removed KWQKScheduler.mm.

2002-05-31  Darin Adler  <darin@apple.com>

	Remove some unused stuff; total of 1000s of lines.

	* Makefile.am: Removed some strange uses of "./" and
	improved stamp-related rules.

	* WebCore-tests.exp: Removed QDir functions.

	* khtml/Makefile.am: Removed java subdirectory.
	* khtml/java/*: Removed.
	* khtml/rendering/render_applet.cpp: Rearrange APPLE_CHANGES so
	that we use our own KJavaAppletWidget rather than a QWidget.
	* kwq/khtml/java/kjavaappletcontext.h: Added.
	* kwq/khtml/java/kjavaappletwidget.h: Added.
	* kwq/KWQKJavaAppletWidget.mm: Added. Replaces WCJavaAppletWidget.mm.
	* kwq/KWQsignals.mm: Removed java-related signals.

	* khtml/css/Makefile.am:
	* khtml/misc/Makefile.am:
	Improve stamp-related rules.

	* khtml/misc/loader.cpp: Move around and add ifdefs so we don't
	need as much KWQ code. Maybe revisit this later -- related to the
	KDE implementation of animated and progressive loading images,
	which we probably don't need, but it may integrate slightly better than
	doing our hacks inside QPixmap.

	* kwq/KWQApplication.mm:
	* kwq/KWQFontInfo.mm:
	* kwq/KWQInputDialog.mm:
	* kwq/KWQKFileDialog.mm:
	* kwq/KWQKHTMLPartBrowserExtension.mm:
	* kwq/KWQKWin.mm:
	* kwq/KWQKWinModule.mm:
	* kwq/KWQKstddirs.mm: